--- a/feed/index.html
+++ b/feed/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Profile | Sosial</title>
+    <title>Feed | Sosial</title>
     <link rel="stylesheet" href="/dist/css/index.css">
 </head>
 <body>
@@ -14,13 +14,14 @@
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse justify-content-between" id="navbarNav">
+          <div class="collapse navbar-collapse justify-content-between
+          " id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/profile/">Profile</a>
+                <a class="nav-link" aria-current="page" href="/profile/">Profile</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/feed/">Feed</a>
+                <a class="nav-link active" href="/feed/">Feed</a>
               </li>
             </ul>
             <ul class="navbar-nav">
@@ -36,7 +37,6 @@
       <main class="flex-grow-1 mt-5">
         <div class="container-fluid">
             <div class="row justify-content-center">
-
 
             </div>
         </div>
