--- a/feed/index.html
+++ b/feed/index.html
@@ -9,38 +9,37 @@
 </head>
 <body>
     <nav class="navbar navbar-dark bg-primary navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">SosialMedia</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse justify-content-between
-          " id="navbarNav">
-            <ul class="navbar-nav">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">SosialMedia</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-between
+        " id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="/profile/">Profile</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="/feed/">Feed</a>
+            </li>
+          </ul>
+          <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="/profile/">Profile</a>
+                  <a class="nav-link" href="">Log Out</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link active" href="/feed/">Feed</a>
-              </li>
-            </ul>
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="">Log Out</a>
-                </li>
-            </ul>
-          </div>
+          </ul>
         </div>
-      </nav>
+      </div>
+    </nav>
 
 
-      <main class="flex-grow-1 mt-5">
-        <div class="container-fluid">
-            <div class="row justify-content-center">
-
-            </div>
-        </div>
-
+    <main class="flex-grow-1 mt-5">
+      <div class="row" id="postContainer">
+      </div>
+      <div class="row">
+        <button id="morePostBtn">More Posts</button>
+      </div>
     </main>
     <script type="module" src="/src/js/index.mjs"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
