--- a/profile/index.html
+++ b/profile/index.html
@@ -40,7 +40,9 @@
                 <div class="profileHeading position-relative d-flex justify-content-between m-0 pt-4 pb-4" >
                   <div class="banner-info d-flex justify-content-between m-0 pt-4 pb-4">
                     <h3 id="profile-name" class="ms-3">TestUser</h3>
-                    <button type="button" class="btn btn-primary d-none" id="edit-button" aria-label="Close" data-bs-theme="dark">Edit</button>
+                    <button type="button" class="d-none" id="edit-button" aria-label="Close">
+                      <img src="/img/settings.png" alt="">
+                    </button>
                   </div>
 
                 </div>
