--- a/feed/index.html
+++ b/feed/index.html
@@ -38,7 +38,7 @@
       <div class="row" id="postContainer">
       </div>
       <div class="row">
-        <button id="morePostBtn">More Posts</button>
+        <button class="btn btn-primary" id="morePostBtn">More Posts</button>
       </div>
     </main>
     <script type="module" src="/src/js/index.mjs"></script>
