--- a/profile/login/index.html
+++ b/profile/login/index.html
@@ -33,17 +33,18 @@
             <div class="row justify-content-center">
                 <div class="col-6">
                     <form id="loginForm">
-  
-                        <div class="form-group mb-2">
-                            <label for="email">Email</label>
-                            <input class="form-control" type="email" name="email" required pattern="^[\w\-.]+@(stud\.)?noroff\.no$">
-
-                        </div>
-                        <div class="form-group mb-2">
-                            <label for="password">Password</label>
-                            <input class="form-control" type="password" name="password" required minlength="8">
-                        </div>
-                        <button class="btn btn-primary">Log inn</button>
+                      <div class="alert alert-danger d-none" role="alert">
+                        Invalid email or password
+                      </div>
+                      <div class="form-group mb-2">
+                          <label for="email">Email</label>
+                          <input class="form-control" type="email" name="email" required pattern="^[\w\-.]+@(stud\.)?noroff\.no$" title="Must be a @stud.noroff.no or @noroff.no adress">
+                      </div>
+                      <div class="form-group mb-2">
+                          <label for="password">Password</label>
+                          <input class="form-control" type="password" name="password" required minlength="8">
+                      </div>
+                      <button class="btn btn-primary">Log inn</button>
                     </form>
                 </div>
 
