--- a/profile/index.html
+++ b/profile/index.html
@@ -66,22 +66,18 @@
                     </div>
                     <div class="form-group mb-2">
                         <label for="banner">Banner</label>
-                        <input class="form-control" type="url" name="banner">
+                        <input class="form-control" type="url" name="banner" id="banner">
                     </div>
                     <div class="form-group mb-2">
                         <label for="avatar">Avatar</label>
-                        <input class="form-control" type="url" name="avatar">
+                        <input class="form-control" type="url" name="avatar" id="avatar">
                     </div>
                     <button class="btn btn-primary col-12">Update</button>
                   </form>
                 </div>
               </div>
-              <div class="div col">
-                <div class="heading">
-                  <img src='https://photojournal.jpl.nasa.gov/jpegMod/PIA25330_modest.jpg' alt="" class="banner" width="100%">
-                </div>
-              </div>
-        
+
+              <div class="col" id="postContainer"></div>
 
             </div>
         </div>
