--- a/profile/index.html
+++ b/profile/index.html
@@ -77,7 +77,9 @@
                 </div>
               </div>
 
-              <div class="col" id="postContainer"></div>
+              <div class="col" id="postContainer">
+                <div id="message"></div>
+              </div>
 
             </div>
         </div>
