--- a/profile/login/index.html
+++ b/profile/login/index.html
@@ -26,31 +26,28 @@
           </div>
         </div>
       </nav>
-
-
       <main class="flex-grow-1 mt-5">
         <div class="container-fluid">
             <div class="row justify-content-center">
                 <div class="col-6">
                     <form id="loginForm">
-                      <div class="alert alert-danger d-none" role="alert">
-                        Invalid email or password
-                      </div>
-                      <div class="form-group mb-2">
-                          <label for="email">Email</label>
-                          <input class="form-control" type="email" name="email" required pattern="^[\w\-.]+@(stud\.)?noroff\.no$" title="Must be a @stud.noroff.no or @noroff.no adress">
-                      </div>
-                      <div class="form-group mb-2">
-                          <label for="password">Password</label>
-                          <input class="form-control" type="password" name="password" required minlength="8">
-                      </div>
-                      <button class="btn btn-primary">Log inn</button>
+                      <fieldset>
+                        <div id="message">
+                        </div>
+                        <div class="form-group mb-2">
+                            <label for="email">Email</label>
+                            <input class="form-control" type="email" name="email" required pattern="^[\w\-.]+@(stud\.)?noroff\.no$" title="Must be a @stud.noroff.no or @noroff.no adress">
+                        </div>
+                        <div class="form-group mb-2">
+                            <label for="password">Password</label>
+                            <input class="form-control" type="password" name="password" required minlength="8">
+                        </div>
+                        <button class="btn btn-primary">Log in</button>
+                      </fieldset>
                     </form>
                 </div>
-
             </div>
         </div>
-
     </main>
     <script type="module" src="/src/js/index.mjs"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
