--- a/profile/register/index.html
+++ b/profile/register/index.html
@@ -33,32 +33,36 @@
         <div class="container-fluid">
             <div class="row justify-content-center">
                 <div class="col-6">
+                    <div id="message">
+                    </div>
                     <form id="registerForm">
-                        <div class="form-group mb-2">
-                            <label for="name">User Name</label>
-                            <input class="form-control" type="text" name="name" required pattern="^[\w]+$" maxlength="20">
-                        </div>
-                        <div class="form-group mb-2">
-                            <label for="email">Email</label>
-                            <input class="form-control" type="email" name="email" required pattern="^[\w\-.]+@(stud\.)?noroff\.no$">
+                        <fieldset>
+                            <div class="form-group mb-2">
+                                <label for="name">User Name</label>
+                                <input class="form-control" type="text" name="name" required pattern="^[\w]+$" maxlength="20">
+                            </div>
+                            <div class="form-group mb-2">
+                                <label for="email">Email</label>
+                                <input class="form-control" type="email" name="email" required pattern="^[\w\-.]+@(stud\.)?noroff\.no$">
 
-                        </div>
-                        <div class="form-group mb-2">
-                            <label for="password">Password</label>
-                            <input class="form-control" type="password" name="password" required minlength="8">
-                        </div>
+                            </div>
+                            <div class="form-group mb-2">
+                                <label for="password">Password</label>
+                                <input class="form-control" type="password" name="password" required minlength="8">
+                            </div>
 
-                        <div class="form-group mb-2">
-                            <label for="banner">Banner</label>
-                            <input class="form-control" type="url" name="banner">
+                            <div class="form-group mb-2">
+                                <label for="banner">Banner</label>
+                                <input class="form-control" type="url" name="banner">
 
-                        </div>
+                            </div>
 
-                        <div class="form-group mb-2">
-                            <label for="avatar">Avatar</label>
-                            <input class="form-control" type="url" name="avatar">
-                        </div>
-                        <button class="btn btn-primary">Register</button>
+                            <div class="form-group mb-2">
+                                <label for="avatar">Avatar</label>
+                                <input class="form-control" type="url" name="avatar">
+                            </div>
+                            <button class="btn btn-primary">Register</button>
+                        </fieldset>
                     </form>
                 </div>
 
