--- a/feed/index.html
+++ b/feed/index.html
@@ -14,14 +14,18 @@
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse justify-content-between
-        " id="navbarNav">
+        <div class="collapse navbar-collapse justify-content-between" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
               <a class="nav-link" aria-current="page" href="/profile/">Profile</a>
             </li>
             <li class="nav-item">
               <a class="nav-link active" href="/feed/">Feed</a>
+            </li>
+            <li class="nav-item">
+              <form action="" class="ms-md-5">
+                <input type="search" placeholder="search" class="form-control rounded-3">
+              </form>
             </li>
           </ul>
           <ul class="navbar-nav">
@@ -41,14 +45,16 @@
         <div class="container col card mt-5" id="createPostContainer">
           <div class="card-body">
             <h2>Whats on your mind?</h2>
-            <form class="d-flex flex-column justify-content-center align-items-center gap-2" id="postForm">
-              <input class="form-control" type="text" name="title" placeholder="Title of new post" required>
-              <textarea name="body" class="form-control" id="exampleFormControlTextarea1" rows="5" placeholder="Write somthing.." required></textarea>
-              <div class="input-group">
-                <label class="input-group-text d-none" for="inputGroupFile01">Upload</label>
-                <input type="url" name="media" class="form-control rounded-3" id="inputGroupFile01" placeholder="Media Url">
-              </div>
-              <button class="btn btn-primary col-md-5 col-12 m-2" type="submit">Submit</button>
+            <form id="postForm">
+              <fieldset class="d-flex flex-column justify-content-center align-items-center gap-2">
+                <input class="form-control" type="text" name="title" placeholder="Title of new post" required id="title">
+                <textarea name="body" class="form-control" id="exampleFormControlTextarea1" rows="5" placeholder="Write somthing.." required></textarea>
+                <div class="input-group">
+                  <label class="input-group-text d-none" for="inputGroupFile01">Upload</label>
+                  <input type="url" name="media" class="form-control rounded-3" id="inputGroupFile01" placeholder="Media Url">
+                </div>
+                <button class="btn btn-primary col-md-5 col-12 m-2" type="submit">Submit</button>
+              </fieldset>
             </form>
 
           </div>
@@ -56,6 +62,7 @@
 
         </div>
       </div>
+      <div id="message"></div>
       <div class="container" id="postContainer">
         <h2>Blog Posts:</h2>
         <div id="message"></div>
