added search input with js

--- a/feed/index.html
+++ b/feed/index.html
@@ -24,7 +24,7 @@
             </li>
             <li class="nav-item">
               <form action="" class="ms-md-5">
-                <input type="search" placeholder="search" class="form-control rounded-3">
+                <input id="search" type="search" placeholder="search" class="form-control rounded-3">
               </form>
             </li>
           </ul>
